--- a/triovet/templates/base.html
+++ b/triovet/templates/base.html
@@ -12,7 +12,8 @@
 </head>
 <body style="background-size: cover; background: linear-gradient(167deg, rgba(2,0,36,1) 0%, rgba(9,121,75,1) 42%, rgba(0,212,255,1) 100%) no-repeat fixed;">
 {% block content %}{% endblock %}
-<script src="{% static 'js/bootstrap.bundle.js' %}></script>
+<script src="{% static 'js/bootstrap.bundle.js' %}"></script>
+<script src="{% static 'js/basic.js' %}"></script>
 {% block scripts %}{% endblock %}
 </body>
 </html>
