--- a/triovet/templates/navbar.html
+++ b/triovet/templates/navbar.html
@@ -1,19 +1,59 @@
 {% load static %}
-<nav class="navbar navbar-expand-lg bg-white mb-4" style="border-bottom-right-radius: 20px; border-bottom-left-radius: 20px">
+<nav class="navbar navbar-expand-lg bg-white mb-4"
+     style="border-bottom-right-radius: 20px; border-bottom-left-radius: 20px">
     <div class="container-fluid">
         <img class="img-fluid object-fit-cover" style="margin: 0 10px 0 40px" src="{% static 'images/logo.png' %}"
              alt="Logo" width="5%">
-        <a class="navbar-brand fw-semibold" style="font-family: 'Open Sans',sans-serif" href="/">Triovet</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        <a class="navbar-brand fw-semibold" style="font-family: 'FreeSans',sans-serif; font-weight: bold" href="/">Triovet</a>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav gap-2">
-                <a class="btn btn-dark text-white" href="/">Home</a>
-                <a class="btn btn-dark text-white" href="/appointments/">Appointments</a>
-                <a class="btn btn-success" href="/admin/">Open Admin Panel</a>
+            <div class="navbar-nav gap-1">
+                <a class="btn btn-dark text-white" href="{% url 'index' %}">Home</a>
+                <a class="btn btn-dark text-white" href="{% url 'new_appointment' %}">New Appointment</a>
             </div>
+            <div class="text-white ms-auto">
+                {% if user.is_staff or user.is_superuser %}
+                    <div class="btn-group btn-dark">
+                        <a class="btn btn-dark" href="{% url 'appointments' %}">Appointments</a>
+                        <button type="button" class="btn btn-dark dropdown-toggle dropdown-toggle-split"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                            <span class="visually-hidden">Toggle Dropdown</span>
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="{% url 'appointments' %}?status=PENDING">Pending
+                                appointments</a></li>
+                            <li><a class="dropdown-item" href="{% url 'appointments' %}?status=APPROVED">Approved
+                                appointments</a></li>
+                            <li><a class="dropdown-item" href="{% url 'appointments' %}?status=HELD">Held
+                                appointments</a>
+                            </li>
+                        </ul>
+                    </div>
+                {% endif %}
+                <div class="btn-group btn-dark">
+                    {% if user.is_authenticated %}
+                        <button type="button" class="btn btn-dark" href="#">User: {{ user }}</button>
+                        <ul class="dropdown-menu">
+                            {% if user.is_staff or user.is_superuser %}
+                                <li><a class="dropdown-item" href="/admin/">Open Admin Panel</a></li>
+                            {% endif %}
+                            <li><a class="dropdown-item" href="{% url 'sign_out' %}">Sign Out</a></li>
+                        </ul>
+                    {% else %}
+                        </div>
+                        <a class="btn btn-dark" href="{% url 'sign_up' %}">Sign Up</a>
+                        <a class="btn btn-dark" href="{% url 'sign_in' %}">Sign In</a>
+                    {% endif %}
+                {% if user.is_authenticated %}
+                    <button type="button" class="btn btn-dark dropdown-toggle dropdown-toggle-split"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                        <span class="visually-hidden">Toggle Dropdown</span>
+                    </button>
+                {% endif %}
+            </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
         </div>
     </div>
 </nav>
