--- a/triovet/templates/navbar.html
+++ b/triovet/templates/navbar.html
@@ -8,7 +8,9 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav gap-1">
                 <a class="btn btn-dark text-white" href="{% url 'index' %}">Home</a>
-                <a class="btn btn-dark text-white" href="{% url 'new_appointment' %}">New Appointment</a>
+                {% if user.is_authenticated %}
+                    <a class="btn btn-dark text-white" href="{% url 'new_appointment' %}">New Appointment</a>
+                {% endif %}
             </div>
             <div class="text-white ms-auto">
                 {% if user.is_staff or user.is_superuser %}
@@ -31,7 +33,8 @@
                 {% endif %}
                 <div class="btn-group dropstart btn-dark">
                     {% if user.is_authenticated %}
-                        <a type="button" class="btn btn-dark" href="{% url 'profile' %}?user_id={{ user.id }}"> {{ user.patient.name }}</a>
+                        <a type="button" class="btn btn-dark"
+                           href="{% url 'profile' %}?user_id={{ user.id }}"> {{ user.patient.name }}</a>
                         <ul class="dropdown-menu">
                             {% if user.is_staff or user.is_superuser %}
                                 <li><a class="dropdown-item" href="/admin/">Open Admin Panel</a></li>
